css/main.css
body {
	margin: 0;
	padding: 0;
	border: 0;
	background: #212529;
	color: #aaa;
	font-family: sans-serif;
}

.alert-page {
	font-size: 150%;
	margin: 1em;
	text-align: center;	
}

.clickable {
	cursor: pointer;
	color: white;
}

.center {
	margin-left: auto;
	margin-right: auto;
}

table {
	width: 94%;
	margin: 3%;
	font-size: 120%;
	text-align: center;
	border-collapse: collapse;
	margin: 2%;
}

#devname {
	text-align: right;
}

table#params, table#device
{
	max-width: 1000px;
}

table#params tr
{
	border-top: thin solid;
	border-bottom: thin solid;
	border-top-color: #888;
	border-bottom-color: #888;
}

td {
	min-width: 1em;
}

th {
	text-align: left;
}

.control {
	text-align: center;
	font-size: 100%;
	margin: 10%;
}

.hidden {
	display: none;
	visibility:hidden;
}

.alert {
	color: red;
}

#params td {
	text-align: right;
}

.grid-container {
	display: grid;
	grid-template-columns: 3% 30% 3% 30% 3% 30%;
}

@media (max-width: 1800px) {
	.grid-container {
		grid-template-columns: 7% 43% 7% 43%;
	}
}

@media (max-width: 1000px) {
	.grid-container {
		grid-template-columns: 15% 85%;
	}
}

.plot {
}

.value {
	color: #aaa;
	padding-left: 10px;
	font-size: 1.2pc;
	font-family: sans-serif;
	margin: auto;
}

table#plot-controls td {
	width: 33%;
}

